--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,54 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-      font-family: "Sora", sans-serif;
+body {
+  font-family: "Sora", sans-serif;
+}
+
+/* =========== common ============= */
+.container {
+  width: 1170px;
+  margin: auto;
+  max-width: calc(100% - 48px);
+}
+a {
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  height: 60px;
+  min-width: 205px;
+  background: #2e80ce;
+  border-radius: 999px;
+  color: #fff;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 60px;
+}
+/* ============= header =========== */
+.header {
+  background: #10375c;
+  min-height: 100vh;
+}
+
+.header-top {
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar {
+  display: flex;
+}
+.btn-login,
+.nav-link {
+  color: #c9d2da;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+  padding: 8px 20px;
 }
